--- a/0x00-Webpack/task_2/public/index.html
+++ b/0x00-Webpack/task_2/public/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack Task</title>
-  <link rel="stylesheet" href="../css/main.css">
-</head>
-<body>
-  <div id="logo"></div>
-  <script src="bundle.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Webpack Task</title><link rel="stylesheet" href="../css/main.css"><script defer="defer" src="bundle.js"></script></head><body><div id="logo"></div><script src="bundle.js"></script></body></html>
